--- a/2402.html
+++ b/2402.html
@@ -109,7 +109,7 @@
         init: function () {
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
-            S.UI.simulate("Chúc|Mừng|Sinh|NNhật|Tuổi||19|#countdown 3|#time");
+            S.UI.simulate("Chúc|Mừng|Sinh|Nhật|Tuổi||19|#countdown 3|#time");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
